Restore Java 21 and JavaFX 23 as requested
- Revert to Java 21 and JavaFX 23.0.1 from original codebase
- Update maven-compiler-plugin to 3.11.0 for Java 21 support
- Keep all selection rendering fixes (TextBoundsType.LOGICAL, coordinate rounding, etc.)
- Note: Requires Java 21 runtime to build

Co-authored-by: antipro <2208595+antipro@users.noreply.github.com>